Fixed drawing cards logic